# techrag

./: .env.example  .gitignore  Dockerfile  README.md  app.py  backends.py  chain.py  config.yaml  evaluate.py  ingest.py  pyproject.toml  requirements.txt  retriever.py  serve.py
data/demo/: 38300-j10.md  langchain_retrieval.md
demo_data/: telecom_demo.md
scripts/: stream_client.py
